# RAG-Core

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.py  docker-compose.yml  pyproject.toml  rag_pipeline.py  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
api/: main.py
concepts/: README.md
concepts/rag_concepts/: 01_rag_architecture.md  02_document_processing.md  03_embedding_systems.md  04_vector_storage.md  05_retrieval_methods.md  06_query_transformation.md  07_reranking_systems.md  08_context_construction.md  09_llm_integration.md  10_evaluation_frameworks.md  11_advanced_rag_patterns.md  README.md
data_pipeline/: __init__.py  chunking.py  document_loader.py
docs/: 00_quick_reference.md  01_data_pipeline.md  02_embeddings.md  03_vector_store.md  04_retrieval.md  05_generation.md  06_rag_pipeline.md  07_evaluation.md  08_api.md  09_cache_and_config.md
embeddings/: __init__.py  embedding.py
evaluation/: __init__.py  evaluator.py
generation/: __init__.py  llm_interface.py  prompt_builder.py
monitoring/: prometheus.yml
notebooks/: 01_data_ingestion.ipynb  02_embedding_creation.ipynb  03_vector_db_indexing.ipynb  04_query_retrieval_demo.ipynb  05_full_rag_pipeline.ipynb  06_evaluation.ipynb
retrieval/: __init__.py  reranker.py  retriever.py
tests/: conftest.py
tests/integration/: test_end_to_end.py
tests/unit/: test_api.py  test_chunking.py  test_document_loader.py  test_llm_interface.py  test_prompt_builder.py  test_rag_pipeline.py  test_reranker.py  test_retriever.py  test_vector_store.py
utils/: __init__.py  cache.py
vector_store/: __init__.py  vector_store.py
